--- a/dynamic_key_binding.html
+++ b/dynamic_key_binding.html
@@ -4,7 +4,81 @@
         <link rel="stylesheet" href="dynamic_key_binding.css">
     </head>
     <script type="text/javascript">
-        
+        document.onkeydown = (({key, shiftKey, ctrlKey, altKey, metaKey, code}) => {
+            var preview = ""
+            const keyPreview = filterAcceptableKey(code)
+            if (ctrlKey) preview += "⌃+"
+            if (shiftKey) preview += "⇧+"
+            if (altKey) preview += "⌥+"
+            if (metaKey) preview += "⌘+"
+            if (keyPreview !== undefined) preview += keyPreview
+            document.getElementById('previewer').innerText = preview
+        })
+        function filterAcceptableKey(code) {
+            return acceptableKeys[code]
+        }
+        const acceptableKeys = {
+            "KeyA": "A",
+            "KeyB": "B",
+            "KeyC": "C",
+            "KeyD": "D",
+            "KeyE": "E",
+            "KeyF": "F",
+            "KeyG": "G",
+            "KeyH": "H",
+            "KeyI": "I",
+            "KeyJ": "J",
+            "KeyK": "K",
+            "KeyL": "L",
+            "KeyM": "M",
+            "KeyN": "N",
+            "KeyO": "O",
+            "KeyP": "P",
+            "KeyQ": "Q",
+            "KeyR": "R",
+            "KeyS": "S",
+            "KeyT": "T",
+            "KeyU": "U",
+            "KeyV": "V",
+            "KeyW": "W",
+            "KeyX": "X",
+            "KeyY": "Y",
+            "KeyZ": "Z",
+            "Digit0": "0",
+            "Digit1": "1",
+            "Digit2": "2",
+            "Digit3": "3",
+            "Digit4": "4",
+            "Digit5": "5",
+            "Digit6": "6",
+            "Digit7": "7",
+            "Digit8": "8",
+            "Digit9": "9",
+            "Minus": "-",
+            "Equal": "=",
+            "BracketLeft": "[",
+            "BracketRight": "]",
+            "Semicolon": ";",
+            "Quote": "\"",
+            "Backslash": "\\",
+            "Slash": "/",
+            "F1": "F1",
+            "F2": "F2",
+            "F3": "F3",
+            "F4": "F4",
+            "F5": "F5",
+            "F6": "F6",
+            "F7": "F7",
+            "F8": "F8",
+            "F9": "F9",
+            "F10": "F10",
+            "F11": "F11",
+            "F12": "F12",
+            "ArrowLeft": "←",
+            "ArrowUp": "↑",
+            "ArrowRight": "→",
+            "ArrowDown": "↓",
+        }
     </script>
     <body>
         <div id="previewer"></div>
