--- a/dynamic_key_binding.html
+++ b/dynamic_key_binding.html
@@ -81,6 +81,13 @@
         }
     </script>
     <body>
-        <div id="previewer"></div>
+        <div style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0); display: flex; flex-direction: row; align-items: flex-start; justify-content: center; z-index: 100000;">
+            <div style="border: 0px; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 0px; margin-top: 20vh; margin-left: 24px; margin-right: 24px; max-width: 400px; flex-grow: 1; box-shadow: rgba(29, 17, 17, 0.15) 0px 5px 12px;">
+                <div class="flexbox flexbox-direction-column flexbox-grow-1 radius-small border-width-normal border-solid border-color-shade">
+                    <div class="margin-top-medium margin-horizontal-smaller">Press key combination and then confirm ENTER</div>
+                    <div class="margin-smaller" id="previewer">test</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
